# nixos

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmessage  .ignore  .mcp.json  AGENTS.md  ARCHITECTURE-BLUEPRINT.md  ARCHITECTURE-TREE.md  ARCHITECTURE-TREE.txt  AUDITD_INVESTIGATION.md  CI_CD_VALIDATION_REPORT.md  CLAUDE.md  CONFIGURATION_ENHANCEMENTS.md  DNS_FIX_SUMMARY.md  DNS_WORKING_CONFIG.md  ECONOMIA-ESPACO.md  EMERGENCIA-LIBERAR-ESPACO.md  ESTRATEGIA-FINAL-COMPLETA.md  EXEC-SUMMARY-LYNIS.md  EXECUTAR-AGORA.md  GITHUB_ACTIONS_SETUP.md  GUIA-BACKUP-E-REINSTALACAO.md  INSTRUCTIONS.md  KUBERNETES-NIXOS-STACK.md  LICENSE  QUICK-START-IMPROVEMENTS.md  README.md  REPOSITORY-ANALYSIS.md  SECRETS.md  SESSION-1-SUMMARY.md  SETUP-SOPS-FINAL.md  VMCTL-USAGE.md  audit_docker_hub.py  auditoria-disco-20251122-054711.txt  build-gemini.nix  emergency-fix.sh  find_patterns.sh  flake.nix  foundation-inspector.sh  (+11 more)
.claude/: CLAUDE.md  HYPRLAND-DESIGN-OVERHAUL.md  mcp-server-implementation.md  settings.local.json
.githooks/: commit-msg  post-merge  pre-commit  pre-push
.github/: CODEOWNERS  README.md  pull_request_template.md
.roo/: mcp.json
arch/: AI-ARCHITECTURE-REPORT-20251229-175026.json  AI-ARCHITECTURE-REPORT-20251229-175026.md  AI-ARCHITECTURE-REPORT-20260103-182309.json  AI-ARCHITECTURE-REPORT-20260103-182309.md  AI-ARCHITECTURE-REPORT-20260108-112507.json  AI-ARCHITECTURE-REPORT-20260108-112507.md  AI-ARCHITECTURE-REPORT.json  AI-ARCHITECTURE-REPORT.md  ARCHITECTURE-REPORT.json  ARCHITECTURE-REPORT.md  ARCHITECTURE-REPORT.txt  ARCHITECTURE-TREE.md  ARCHITECTURE-TREE.txt  README.md  dependency-graph.mmd
ci-cd/: default.nix  tailscale-integration-test.nix
dev/flakes/Python Flake/: QUICKSTART.md  README.md  analyze_binary.py  docker-compose.yml  pyproject.toml
docs/: .tree-commands.md  2025-11-26-claude-preciso-acessar-o-server-desktop-o-guiux.txt  AGENT-EMPOWERMENT-TOOLKIT.md  AGENT-TOOLKIT-QUICKSTART.md  AGENTS.md  ALTERNATIVA-REINSTALACAO-LIMPA.md  ANALISE-SSH-CONFIG-PROBLEMAS.md  ARCHITECTURE-BLUEPRINT.md  ARCHITECTURE-TRACKING.md  AUDIO_TROUBLESHOOTING.md  AUDITORIA-DISCO-FERRAMENTAS.md  BINARY-CACHE-SETUP.md  BUILD-OPTIMIZATION-2025-11-22.md  CENTRALIZACAO-LOGS-DESKTOP.md  CI-CD-ARCHITECTURE.md  CONTAINER-KITS-USAGE.md  DECISOES-CRITICAS.md  DESKTOP-OFFLOAD-QUICKSTART.md  DESKTOP-OFFLOAD-SETUP.md  DESKTOP-QUICK-SETUP.md  DESKTOP-SETUP-REQUIRED.md  DESKTOP-TROUBLESHOOTING.md  DEV-DIRECTORY-SECURITY.md  DOCKER-TO-NIX-MIGRATION.md  ENTERPRISE-SHOWCASE-ARCHITECTURE.md  EXAMPLES-DOCKER-REPLICATION.md  EXECUTIVE-SUMMARY-SHOWCASE.md  EXEMPLO-INTEGRACAO-HOST.md  FINAL-STATUS-REPORT.md  GIT-WORKFLOW-TESTING-IMPROVEMENT-PLAN.md  GITEA-SHOWCASE-DECLARATIVE-SETUP.md  GITEA-SHOWCASE-SETUP.md  GITHUB-ACTIONS-RUNNER-CONFIG-EXAMPLES.md  GITHUB-ACTIONS-RUNNER-FIX.md  GITHUB-SOPS-INTEGRATION.md  GITHUB_CLI_AUTH.md  GITLAB_INTEGRATION.md  GITLAB_SECRETS_SETUP.md  GLASSMORPHISM-DESIGN-SYSTEM.md  GUIA-CORRECAO-DNS.md  (+79 more)
edr-nixos/: README.md  flake.nix
home/: niri.nix
lib/: packages.nix  python.nix  shell.nix  shells.nix
modules/: TEMPLATE.nix  TEMPLATE_GUIDE.md  default.nix
modules/ml/offload/api/: Cargo.toml
modules/ml/offload/api/src/: api.rs  backends.rs  health.rs  main.rs  vram.rs  websocket.rs
modules/ml/offload/api/src/backends/: llamacpp.rs
modules/ml/unified-llm/: Cargo.toml  mcp-server-config.json
modules/ml/unified-llm/crates/api/: Cargo.toml
modules/ml/unified-llm/crates/api/src/: lib.rs
modules/ml/unified-llm/crates/cli/: Cargo.toml
modules/ml/unified-llm/crates/cli/src/: lib.rs
modules/ml/unified-llm/crates/core/: Cargo.toml
modules/ml/unified-llm/crates/core/src/: models.rs
modules/ml/unified-llm/crates/providers/: Cargo.toml
modules/ml/unified-llm/crates/providers/src/: anthropic.rs  deepseek.rs  lib.rs  ollama.rs  openai.rs
modules/ml/unified-llm/crates/router/: Cargo.toml
modules/ml/unified-llm/crates/router/src/: lib.rs
modules/ml/unified-llm/crates/security/: Cargo.toml
modules/ml/unified-llm/crates/security/src/: lib.rs
modules/ml/unified-llm/docs/: MIGRATION-NOTES.md
modules/ml/unified-llm/mcp-server/: flake.nix  package-lock.json  package.json
modules/ml/unified-llm/mcp-server/docs/: EXPANSION-ARCHITECTURE.md
modules/ml/unified-llm/mcp-server/src/: index.ts
modules/ml/unified-llm/mcp-server/src/knowledge/: database.ts
modules/ml/unified-llm/mcp-server/src/middleware/: index.ts  rate-limiter.ts
modules/ml/unified-llm/mcp-server/src/tools/: knowledge.ts  web-search.ts
modules/ml/unified-llm/mcp-server/src/tools/emergency/: index.ts
modules/ml/unified-llm/mcp-server/src/tools/laptop-defense/: index.ts
modules/ml/unified-llm/mcp-server/src/types/: extended-tools.ts  index.ts
modules/ml/unified-llm/mcp-server/src/types/middleware/: rate-limiter.ts
nix/: GITLAB_SETUP.md  gitlab-secrets.nix  gpg-gitlab-config.nix  phoenix-aliases.nix  ssh-config.nix  ssh-gitlab-config.nix
overlays/: README.md  antigravity.nix.disabled  default.nix  hyprland.nix  python-packages.nix  python-tests-fix.nix
projects/: default.nix
projects/cognitive-vault/core/: Cargo.toml  default.nix
projects/cognitive-vault/core/include/: vault_core.h
projects/cognitive-vault/core/src/: crypto.rs  ffi.rs  lib.rs  store.rs
reports/: SECURITY_AUDIT_REPORT.md  SERVICES_MIGRATION_PLAN.md  SYSTEMD_CENTRALIZATION_INDEX.md  SYSTEMD_SERVICES_SUMMARY.txt  audit_report_20251214_simple.md  config_summary.md
scripts/: ENHANCEMENT_smart_commits.md  MONITOR-REBUILD-USAGE.md  NOTION-EXPORTER-GUIDE.md  README.md  add-secret.sh  add-to-sops.sh  alias-inspector.sh  arch-analyzer.py  audit-config-simple.sh  audit-config.py  auditoria-disco.sh  auto-commit.sh  backup-rapido.sh  build-container-images.sh  check-module-options.py  create.sh  cypher-host.nix  deb-add  delete_large_files.py  desktop-cfg.nix  desktop-config-backup.nix  detecta-anomalias.sh  diagnose-home-manager.sh  diagnostico-detalhado.sh  diagnostico-disco.sh  dns-diagnostics.sh  docker-inspect-to-nix.sh  emergency-cleanup.sh  find-nix-syntax-error.py  find_patterns.sh  fix-mcp-configs.sh  (+83 more)
(+672 files in other folders)
