[workspace]
members = [
    "crates/core",
    "crates/security",
    "crates/providers",
    "crates/local",
    "crates/router",
    "crates/api",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kernelcore"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/VoidNxSEC/nixos"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP/Network
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1.4", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Security/Crypto
rustls = "0.23"
rustls-pemfile = "2.1"
ring = "0.17"
argon2 = "0.5"
secrecy = { version = "0.8", features = ["serde"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
directories = "5.0"

# Rate limiting
governor = "0.6"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database (for audit logs and model registry)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# NVIDIA GPU monitoring
nvml-wrapper = "0.9"

# Process management
sysinfo = "0.30"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"
futures = "0.3"
tokio-tungstenite = "0.21"

# Environment variables
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.dev]
opt-level = 0
debug = true