[package]
name = "vault_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Error handling
thiserror = "1.0"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# FFI
libc = "0.2"

# Serialization (internal storage)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Start with JSON for simplicity, move to Protobuf later if needed
