[package]
name = "ml-offload-api"
version = "0.1.0"
edition = "2021"
authors = ["kernelcore"]
description = "ML Offload Manager - Unified REST API for ML model orchestration"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# HTTP client (for backend communication)
reqwest = { version = "0.11", features = ["json"] }

# NVIDIA GPU monitoring
nvml-wrapper = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Process management
sysinfo = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
